<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:text="@string/portal_login"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etNamaDosen"
        android:hint="@string/hint_nama_dosen"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnMasuk"
        android:text="@string/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
